--- a/0x15-javascript-web_jquery/index.html
+++ b/0x15-javascript-web_jquery/index.html
@@ -9,20 +9,20 @@
     </header>
     <section>
       <ul>
-        <a href="0-main.html">Visit 0-main.html</a>
-        <a href="1-main.html">Visit 1-main.html</a>
-        <a href="2-main.html">Visit 2-main.html</a>
-        <a href="3-main.html">Visit 3-main.html</a>
-        <a href="4-main.html">Visit 4-main.html</a>
-        <a href="5-main.html">Visit 5-main.html</a>
-        <a href="6-main.html">Visit 6-main.html</a>
-        <a href="7-main.html">Visit 7-main.html</a>
-        <a href="8-main.html">Visit 8-main.html</a>
-        <a href="9-main.html">Visit 9-main.html</a>
-        <a href="100-main.html">Visit 100-main.html</a>
-        <a href="101-main.html">Visit 101-main.html</a>
-        <a href="102-main.html">Visit 102-main.html</a>
-        <a href="103-main.html">Visit 103-main.html</a>
+        <li><a href="0-main.html">Visit 0-main.html</a></li>
+        <li><a href="1-main.html">Visit 1-main.html</a></li>
+        <li><a href="2-main.html">Visit 2-main.html</a></li>
+        <li><a href="3-main.html">Visit 3-main.html</a></li>
+        <li><a href="4-main.html">Visit 4-main.html</a></li>
+        <li><a href="5-main.html">Visit 5-main.html</a></li>
+        <li><a href="6-main.html">Visit 6-main.html</a></li>
+        <li><a href="7-main.html">Visit 7-main.html</a></li>
+        <li><a href="8-main.html">Visit 8-main.html</a></li>
+        <li><a href="9-main.html">Visit 9-main.html</a></li>
+        <li><a href="100-main.html">Visit 100-main.html</a></li>
+        <li><a href="101-main.html">Visit 101-main.html</a></li>
+        <li><a href="102-main.html">Visit 102-main.html</a></li>
+        <li><a href="103-main.html">Visit 103-main.html</a></li>
       </ul>
     </section>
     <footer>
